Added travis config file and test script to package.json

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "main":"server.js",
     "dependencies": {
         "underscore": ">= 1.2.0"
+    },
+    scripts: {
+      test: "make test"
     }
 }
