--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version":"0.0.2",
     "main":"server.js",
     "dependencies": {
-        "underscore": ">= 1.2.0"
+        "underscore": ">= 1.2.0",
+        "A": ">= 0.0.1"
     },
     "devDependencies": {
         "litmus" :  ">=0.4.0"
